# claude-plugins

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: validate.yml
docs/superpowers/plans/: 2026-05-12-openvpn3-ephemeral-profiles.md
docs/superpowers/specs/: 2026-05-12-openvpn3-ephemeral-profiles-design.md  2026-05-12-openvpn3-setup-doctor-commands-design.md
plugins/mysql-client/: CLAUDE.md  README.md  setup-checklist.md
plugins/mysql-client/.claude-plugin/: plugin.json
plugins/mysql-client/agents/: mysql-investigator.md
plugins/mysql-client/commands/: doctor.md  setup.md
plugins/mysql-client/scripts/mysql-url-to-cnf/: Makefile  README.md  pyproject.toml
plugins/mysql-client/scripts/mysql-url-to-cnf/src/mysql_url_to_cnf/: __init__.py
plugins/mysql-client/scripts/mysql-url-to-cnf/tests/: test_convert.py
plugins/mysql-client/skills/mysql-client/: SKILL.md
plugins/mysql-client/skills/mysql-client/references/: connecting.md  explain-reading.md  local-settings.md  output-formats.md  perf-and-processes.md  safety-perimeter.md  schema-introspection.md
plugins/openvpn3-on-demand/: .mcp.json  CLAUDE.md  NOTICE  README.md  setup-checklist.md
plugins/openvpn3-on-demand/.claude-plugin/: plugin.json
plugins/openvpn3-on-demand/commands/: doctor.md  setup.md
plugins/openvpn3-on-demand/examples/: openvpn3-on-demand.local.md
plugins/openvpn3-on-demand/hooks/: hooks.json
plugins/openvpn3-on-demand/hooks/scripts/: teardown.py  teardown.sh
plugins/openvpn3-on-demand/servers/: openvpn3_mcp.py
plugins/openvpn3-on-demand/servers/openvpn3/: README.md  pyproject.toml
plugins/openvpn3-on-demand/servers/openvpn3/openvpn3_mcp/: __init__.py  server.py
plugins/openvpn3-on-demand/servers/openvpn3/scripts/: launch.sh
plugins/openvpn3-on-demand/servers/openvpn3/src/openvpn3_mcp/: server.py
plugins/openvpn3-on-demand/servers/openvpn3/tests/: _fakes.py  conftest.py  test_all_configs.py  test_helpers.py  test_lookup.py  test_server.py  test_session_view.py  test_start_session.py  test_teardown.py  test_tools.py  test_wait_session_cleared.py
plugins/openvpn3-on-demand/skills/vpn-on-demand/: SKILL.md
plugins/openvpn3-on-demand/skills/vpn-on-demand/references/: example-local-settings.md
