[project]
name = "openvpn3-mcp"
version = "0.3.3"
description = "MCP server wrapping the openvpn3-linux CLI. Ships as part of the openvpn3-on-demand Claude Code plugin."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "aeresov" }]
keywords = ["mcp", "openvpn3", "vpn"]
dependencies = [
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7",
]

[project.scripts]
openvpn3-mcp = "openvpn3_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openvpn3_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
