[project]
name = "openvpn3-mcp"
version = "0.4.0"
description = "MCP server for openvpn3-linux. Talks to the openvpn3 D-Bus services via the openvpn3 Python module. Ships as part of the openvpn3-on-demand Claude Code plugin."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "aeresov" }]
keywords = ["mcp", "openvpn3", "vpn"]
dependencies = [
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9",
]

[project.scripts]
openvpn3-mcp = "openvpn3_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openvpn3_mcp"]

[tool.pytest]
testpaths = ["tests"]
