[project]
name = "openvpn3-mcp"
version = "0.8.0"
description = "MCP server for openvpn3-linux. Talks to the openvpn3 D-Bus services via the openvpn3 Python module. Ships as part of the openvpn3-on-demand Claude Code plugin."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "aeresov" }]
keywords = ["mcp", "openvpn3", "vpn"]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.12.1",
    "ty>=0.0.37",
]

[project.scripts]
openvpn3-mcp = "openvpn3_mcp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 180
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["openvpn3_mcp", "_fakes"]

[tool.ty.environment]
python-version = "3.10"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]
